[workspace]
members = ["mono-proc"]

[package]
name = "monoOS"
version = "0.1.0"
edition = "2021"
description = "A hobbyist monolithic operating system, targeting x86-64."
readme = "README.md"
license = "MIT"
authors = ["binds <bindsdev@gmail.com>"]
default-run = "monoos"

[dependencies]
complete-pic = { version = "0.3.1", default-features = false, features = ["8259pic"] }
limine = "0.1.11"
log = "0.4.19"
mono-proc = { version = "0.1.0", path = "mono-proc" }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex", "once", "lazy"] }
uart_16550 = "0.3.0"
x86_64 = "0.14.11"

[[bin]]
name = "monoos"
path = "src/main.rs"
